[package]
name = "balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
rand = "0.8.4"
awc = "3.4.0"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
actix-rt = "2.5"
ctrlc = "3.3.0"
